Last bug fix - making Volunteer better on mobile

--- a/src/pages/Donate.css
+++ b/src/pages/Donate.css
@@ -8,6 +8,11 @@
 
 }
 
+.donate-list {
+    font-family: 'Gothic A1', sans-serif;
+    animation: slidedown 2s ease;
+}
+
 .donate-list h3 {
     font-family: "Century Gothic";
     color: #F3F4F5;
